--- a/GestorRecetas/.github/workflows/test.yml
+++ b/GestorRecetas/.github/workflows/test.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          distribution: corretto
+          distribution: 'corretto'
           java-version: '17'
           cache: maven
 
