--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,20 +11,23 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           distribution: 'corretto'
           java-version: '17'
-          cache: maven
-      
+          cache: 'maven'
+
       - name: Build with Maven
+        working-directory: ./GestorRecetas   # Especifica la carpeta GestorRecetas aquí
         run: mvn clean install
-      
+
       - name: Run tests
+        working-directory: ./GestorRecetas   # Especifica la carpeta GestorRecetas aquí también
         run: mvn test
+
