--- a/GestorRecetas/src/main/resources/application.properties
+++ b/GestorRecetas/src/main/resources/application.properties
@@ -1,8 +1,21 @@
+# Configuración para la base de datos PostgreSQL (producción)
 spring.application.name=GestorRecetas
-spring.datasource.url=jdbc:postgresql://localhost:5432/GestorRecetas
-spring.datasource.username=postgres
-spring.datasource.password=magic
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database=POSTGRESQL
+#spring.datasource.url=jdbc:postgresql://localhost:5432/GestorRecetas
+#spring.datasource.username=postgres
+#spring.datasource.password=magic
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.database=POSTGRESQL
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+
+# Configuración para la base de datos H2 (solo para pruebas)
+---
+spring.config.activate.on-profile=test
+
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database=H2
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
